[workspace]
resolver = "2"
members = ["eager2", "eager2-core"]

[workspace.package]
version = "1.1.4"
authors = ["Daniel Bloom"]
edition = "2021"
license = "MIT"
repository = "https://github.com/Daniel-Aaron-Bloom/eager2"
rust-version = "1.88"

[workspace.dependencies]
eager2-core = { path = "./eager2-core", version = "1.1.4" }
