[package]
name = "eager2-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
categories = ["development-tools"]
description = "eager2 internal helper crate"
documentation = "https://docs.rs/eager2"
license.workspace = true
repository.workspace = true
readme = "../README.md"
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
proc-macro2 = { version = "1", optional = true }
quote = { version = "1", optional = true }

[features]
"testing" = ["proc-macro2", "quote"]
