[package]
name = "eager2"
version.workspace = true
authors.workspace = true
edition.workspace = true
categories = ["development-tools"]
description = "Proc-macros for eager macro expansion"
documentation = "https://docs.rs/eager2"
license.workspace = true
repository.workspace = true
readme = "../README.md"
rust-version.workspace = true

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
convert_case = "0.8.0"
litrs = { version = "0.4", default-features = false }
eager2-core = { workspace = true }

[features]
trace_macros = []
